XMLtoCSV/objects/unpackaged/objects/PCYC_Email_Group_Unsubscribe__c.object
<CustomObject>
    <description>This for eloqua unsubscribe..</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Email Group Unsubscribes</relationshipLabel>
        <relationshipName>Email_Group_Unsubscribes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCYC_Unsubscribed_Email__c</fullName>
        <label>Unsubscribed Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Unsubscribe_from_CLL_All__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1 for unsubscribed (or checked), 0 for unchecked</description>
        <label>Unsubscribe from CLL - All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unsubscribe_from_MZL_All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsubscribe from MZL - All</label>
        <type>Checkbox</type>
    </fields>
    <label>Email Group Unsubscribe</label>
    <nameField>
        <label>Email Group Unsubscribe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Group Unsubscribes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>